--- a/src/main/resources/com/example/surplusapp/main.fxml
+++ b/src/main/resources/com/example/surplusapp/main.fxml
@@ -3,22 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.mainController">
+<AnchorPane fx:id="root" prefHeight="500.0" prefWidth="800.0" stylesheets="@../../../../java/com/example/surplusapp/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.mainController">
    <children>
-      <Button layoutX="522.0" layoutY="13.0" mnemonicParsing="false" text="Çıkış Yap" />
-      <ListView layoutX="14.0" layoutY="87.0" prefHeight="226.0" prefWidth="110.0" />
-      <ListView layoutX="383.0" layoutY="87.0" prefHeight="226.0" prefWidth="203.0" />
-      <ListView layoutX="150.0" layoutY="87.0" prefHeight="226.0" prefWidth="203.0" />
-      <Label layoutX="456.0" layoutY="64.0" text="Tüm Şarkılar" />
-      <Label layoutX="230.0" layoutY="64.0" text="Label" />
+      <Button fx:id="cikis" layoutX="674.0" layoutY="13.0" mnemonicParsing="false" onAction="#cikis" styleClass="cikis" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Çıkış Yap" />
+      <ListView layoutX="14.0" layoutY="87.0" prefHeight="350.0" prefWidth="154.0" />
+      <ListView layoutX="203.0" layoutY="87.0" prefHeight="350.0" prefWidth="169.0" />
+      <Label layoutX="559.0" layoutY="64.0" text="Tüm Şarkılar" />
+      <Label layoutX="274.0" layoutY="64.0" text="Label" />
       <Label layoutX="37.0" layoutY="64.0" text="Playlistlerim" />
-      <Button layoutX="103.0" layoutY="13.0" mnemonicParsing="false" text="Yeni Playlist" />
-      <Button layoutX="455.0" layoutY="325.0" mnemonicParsing="false" text="Şarkı Ekle" />
-      <Button layoutX="218.0" layoutY="325.0" mnemonicParsing="false" text="Şarkı Sil" />
-      <Button layoutX="14.0" layoutY="325.0" mnemonicParsing="false" text="Playlist Görüntüle" />
-      <Label fx:id="label" layoutX="14.0" layoutY="16.0" prefHeight="18.0" prefWidth="79.0" text="test" />
-      <Button layoutX="197.0" layoutY="13.0" mnemonicParsing="false" text="Takip Ettiklerin" />
+      <Button fx:id="yeniPlaylist" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Yeni Playlist" />
+      <Button fx:id="sarkiEkle" layoutX="536.0" layoutY="447.0" mnemonicParsing="false" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Şarkı Ekle" />
+      <Button fx:id="sarkiSil" layoutX="232.0" layoutY="447.0" mnemonicParsing="false" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Şarkı Sil" />
+      <Button fx:id="playlistGoruntule" layoutX="14.0" layoutY="447.0" mnemonicParsing="false" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Playlist Görüntüle" />
+      <Button fx:id="takipEtikllerin" layoutX="177.0" layoutY="13.0" mnemonicParsing="false" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Takip Ettiklerin" />
+      <TableView layoutX="400.0" layoutY="87.0" prefHeight="350.0" prefWidth="383.0">
+        <columns>
+          <TableColumn prefWidth="106.4000244140625" text="Şarkı Adı" />
+          <TableColumn prefWidth="92.79998779296875" text="Şarkıcı" />
+            <TableColumn prefWidth="71.20001220703125" text="Uzunluk" />
+            <TableColumn prefWidth="114.39990234375" text="Kategorisi" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
