--- a/src/main/resources/com/example/surplusapp/giris.fxml
+++ b/src/main/resources/com/example/surplusapp/giris.fxml
@@ -7,19 +7,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.girisController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@../../../../java/com/example/surplusapp/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.girisController">
    <children>
-      <Button fx:id="giris" layoutX="308.0" layoutY="270.0" mnemonicParsing="false" onAction="#girisYap" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Giris Yap" />
-      <Button fx:id="kayıtOl" layoutX="188.0" layoutY="270.0" mnemonicParsing="false" onAction="#goKayitOl" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Kayıt Ol" />
-      <TextField fx:id="mail" layoutX="188.0" layoutY="155.0" prefHeight="26.0" prefWidth="226.0" promptText="Mail Giriniz:" stylesheets="@../../../../java/com/example/surplusapp/style.css" />
-      <Label layoutX="202.0" layoutY="65.0" text="SURPLUS">
+      <Button fx:id="giris" layoutX="406.0" layoutY="300.0" mnemonicParsing="false" onAction="#girisYap" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Giris Yap" />
+      <Button fx:id="kayıtOl" layoutX="286.0" layoutY="300.0" mnemonicParsing="false" onAction="#goKayitOl" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Kayıt Ol" />
+      <TextField fx:id="mail" layoutX="286.0" layoutY="185.0" prefHeight="26.0" prefWidth="226.0" promptText="Mail Giriniz:" stylesheets="@../../../../java/com/example/surplusapp/style.css" />
+      <Label layoutX="300.0" layoutY="95.0" text="SURPLUS">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label layoutX="427.0" layoutY="339.0" text="170420050 Yiğit Bayraktaroğlu" />
-      <Label layoutX="422.0" layoutY="357.0" text="171420008 Hamza Can Korkmaz" />
-      <PasswordField fx:id="pass" layoutX="189.0" layoutY="200.0" prefHeight="26.0" prefWidth="226.0" promptText="Şifre Giriniz:" />
-      <Label fx:id="feedback" layoutX="186.0" layoutY="239.0" prefHeight="18.0" prefWidth="226.0" textAlignment="CENTER" />
+      <Label layoutX="624.0" layoutY="450.0" text="170420050 Yiğit Bayraktaroğlu" />
+      <Label layoutX="614.0" layoutY="468.0" text="171420008 Hamza Can Korkmaz" />
+      <PasswordField fx:id="pass" layoutX="287.0" layoutY="230.0" prefHeight="26.0" prefWidth="226.0" promptText="Şifre Giriniz:" />
+      <Label fx:id="feedback" layoutX="284.0" layoutY="269.0" prefHeight="18.0" prefWidth="226.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
