--- a/src/main/resources/com/example/surplusapp/main.fxml
+++ b/src/main/resources/com/example/surplusapp/main.fxml
@@ -4,17 +4,17 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="900.0" stylesheets="@../../../../java/com/example/surplusapp/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.mController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.surplusapp.mController">
    <children>
-      <Button fx:id="cikis" layoutX="776.0" layoutY="13.0" mnemonicParsing="false" onAction="#cikis" styleClass="cikis" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Çıkış Yap" />
+      <Button fx:id="cikis" layoutX="821.0" layoutY="21.0" mnemonicParsing="false" onAction="#cikis" text="Çıkış Yap" />
       <Label layoutX="673.0" layoutY="82.0" text="Tüm Şarkılar" />
-      <Button fx:id="yeniPlaylist" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="154.0" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Yeni Playlist" />
-      <Button fx:id="sarkiEkle" layoutX="638.0" layoutY="521.0" mnemonicParsing="false" onAction="#sarkiEkle" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Şarkı Ekle" />
-      <Button fx:id="sarkiSil" layoutX="288.0" layoutY="521.0" mnemonicParsing="false" onAction="#deletePlaylistSong" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Şarkı Sil" />
-      <Button fx:id="playlistGoruntule" layoutX="14.0" layoutY="521.0" mnemonicParsing="false" onAction="#getPlaylistSong" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Playlist Görüntüle" />
-      <Button fx:id="takipEtikllerin" layoutX="218.0" layoutY="13.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="171.0" styleClass="Button" stylesheets="@../../../../java/com/example/surplusapp/style.css" text="Takip Ettiklerin" />
+      <Button fx:id="yeniPlaylist" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#newPlaylist" prefHeight="42.0" prefWidth="154.0" text="Yeni Playlist" />
+      <Button fx:id="sarkiEkle" layoutX="660.0" layoutY="521.0" mnemonicParsing="false" onAction="#sarkiEkle" text="Şarkı Ekle" />
+      <Button fx:id="sarkiSil" layoutX="309.0" layoutY="521.0" mnemonicParsing="false" onAction="#deletePlaylistSong" text="Şarkı Sil" />
+      <Button fx:id="playlistGoruntule" layoutX="36.0" layoutY="521.0" mnemonicParsing="false" onAction="#getPlaylistSong" text="Playlist Görüntüle" />
       <TableView fx:id="songTableView" layoutX="502.0" layoutY="106.0" prefHeight="399.0" prefWidth="383.0">
         <columns>
           <TableColumn fx:id="adCol" prefWidth="125.5999755859375" text="Şarkı Adı" />
@@ -31,10 +31,12 @@
             <TableColumn fx:id="plcatCol" prefWidth="75.0" text="Kategorisi" />
         </columns>
       </TableView>
-      <Label fx:id="lbl" layoutX="221.0" layoutY="82.0" prefHeight="18.0" prefWidth="250.0" text="Label" textAlignment="CENTER" />
+      <Label fx:id="lbl" layoutX="221.0" layoutY="82.0" prefHeight="18.0" prefWidth="250.0" textAlignment="CENTER" />
+      <TextField fx:id="playlistName" layoutX="188.0" layoutY="21.0" promptText="Playlist Adı:" visible="false" />
+      <Button fx:id="olustur" layoutX="346.0" layoutY="21.0" mnemonicParsing="false" onAction="#createPlaylist" text="Oluştur" visible="false" />
       <TableView fx:id="playlistTableview" layoutX="14.0" layoutY="106.0" prefHeight="399.0" prefWidth="154.0">
         <columns>
-          <TableColumn fx:id="playlistNameCol" prefWidth="75.0" text="C1" />
+          <TableColumn fx:id="playlistNameCol" prefWidth="153.60000648498536" text="Playlistler" />
         </columns>
       </TableView>
    </children>
